@@ -83,7 +83,7 @@ dfsch_object_t* dfsch_load_scm(dfsch_ctx_t* ctx, char* scm_name){
    * be better ways to do this
    */
   
-  dfsch_ctx_eval_list(ctx, dfsch_read_scm(scm_name));
+  return dfsch_ctx_eval_list(ctx, dfsch_read_scm(scm_name));
 }
 dfsch_object_t* dfsch_read_scm(char* scm_name){
   FILE* f = fopen(scm_name,"r");
